--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -1,17 +1,18 @@
 CC=gcc
 CFLAGS=-I.
-all : sequential_min_max parallel_min_max
+all : sequential_min_max parallel_min_max exec
 sequential_min_max : utils.o find_min_max.o utils.h find_min_max.h
 	$(CC) -o sequential_min_max find_min_max.o utils.o sequential_min_max.c $(CFLAGS)
 
-parallel_min_max : utils.o find_min_max.o utils.h find_min_max.h
-	$(CC) -o parallel_min_max utils.o find_min_max.o parallel_min_max.c $(CFLAGS)
+parallel_min_max : parallel_min_max.c
+	$(CC) -o parallel_min_max parallel_min_max.c $(CFLAGS)
 
 utils.o : utils.h
 	$(CC) -o utils.o -c utils.c $(CFLAGS)
-
+exec : exec.cpp
+	$(CC) -o exec -x c++ -c exec.cpp $(CFLAGS)
 find_min_max.o : utils.h find_min_max.h
 	$(CC) -o find_min_max.o -c find_min_max.c $(CFLAGS)
 
 clean :
-	rm utils.o find_min_max.o sequential_min_max parallel_min_max
+	rm exec utils.o find_min_max.o sequential_min_max parallel_min_max
